# IITM_AIIMSD_Platelet

./: .gitignore  Annotation.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: Annotation_&_Feature_Extraction.ipynb
src/platelet_em/: __init__.py  batch_annotate.py  batch_processing.py  cli.py  consolidate.py  detection.py  feature_analysis.py  open_canalicular.py  plasma_membrane.py
src/platelet_em/deep_learning/: __init__.py  classification.py  segmentation.py
